# cpp_kurs

./: .gitignore  CMakeLists.txt  README.md  main.cpp  Программирование_ЛБ_6_Бойчак_ИР_8В31.docx
